# flexcore

./: .dockerignore  .env.example  .gitignore  .gitmodules  .golangci.yml  .makerc  .pre-commit-config.yaml  ADVANCED_GO_PATTERNS.md  ADVANCED_PATTERNS_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_COMPLETE.md  Dockerfile  Dockerfile.dev  Dockerfile.flexcore-node  FINAL_100_PERCENT_VALIDATION_COMPLETE.md  FINAL_VALIDATION_100.md  FLEXCORE_100_PERCENT_COMPLETE_FINAL_REPORT.md  FLEXCORE_100_PERCENT_DISTRIBUTED_VALIDATION_COMPLETE.md  FLEXCORE_100_PERCENT_VALIDATION_REPORT.md  FLEXCORE_IMPLEMENTATION_COMPLETE.md  HONEST_FINAL_VALIDATION.md  IMPLEMENTATION_SUMMARY.md  MAKEFILE_README.md  MISSION_ACCOMPLISHED_100_PERCENT.md  Makefile  NATIVE_BUILD_GUIDE.md  OBSERVABILITY_VALIDATION.md  PERFORMANCE_BENCHMARKS.md  PROFESSIONALIZATION_REPORT.md  PROJECT_STATUS.md  README.md  README_windmill_integration.md  REAL_DISTRIBUTED_IMPLEMENTATION_COMPLETE.md  REAL_STATUS.md  SOLID_VALIDATION.md  VALIDATION_SUCCESS_20250701_104420.md  WINDMILL_INTEGRATION.md  advanced_ai_plugin.go  ai_ml_standalone_service.go  chaos_engineering_results_1751422263.json  (+58 more)
.github/workflows/: ci.yml  release.yml
.qlty/: qlty.toml
_cleanup/: FINAL_100_PERCENT_COMPLETE_REPORT.md  FINAL_100_PERCENT_COMPLETION_REPORT.md  FINAL_100_PERCENT_REAL_VALIDATION.md  FINAL_100_PERCENT_VALIDATION.go  FINAL_100_PERCENT_VALIDATION_REPORT.md  FINAL_MISSION_ACCOMPLISHED_REPORT.md  FINAL_ULTIMATE_100_PERCENT_ACHIEVEMENT.go  MISSION_ACCOMPLISHED_100_PERCENT.md  PRODUCTION_READY_CERTIFICATION.md  REAL_ENVIRONMENT_100_PERCENT_SUCCESS.md  ULTIMATE_MAKEFILE_DEMO.md  VALIDATION_SUCCESS_20250701_103204.md  VALIDATION_SUCCESS_20250701_103256.md  VALIDATION_SUCCESS_20250701_103348.md
adapters/: base.go
api/grpc/: flexcore.proto
application/commands/: command_bus.go  command_bus_test.go  pipeline_commands.go
application/queries/: pipeline_queries.go  query_bus.go
auth/: go.mod  multi_tenant_auth.go
cmd/e2e-test/: e2e-test-results.json  e2e-test-summary.txt  main.go
cmd/flexcore/: main.go  main.go.old
cmd/flexcore-node/: main.go
cmd/server/: main.go
cmd/tests/: test-complete-system.go  test-real-plugin-system.go  test_final_real.go  test_plugin_real.go  test_real_basic.go  test_real_di.go  test_real_di_simple.go  test_real_distributed.go  test_real_distributed_working.go  test_real_implementation.go  test_real_plugin.go  test_real_redis.go  test_stress_1000_events.go
config/: flexcore-node.yaml
configs/development/: flexcore-node.yaml
configs/production/: prometheus.yml
core/: cluster_manager.go  deprecation.go  distributed_message_queue.go  distributed_scheduler.go  event_router.go  flexcore.go
coverage/: coverage.html  coverage.out
deployments/: README-WORKSPACE-INTEGRATION.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
deployments/docker/: Dockerfile
docker/haproxy/: haproxy-fixed.cfg
docs/: ADVANCED_GO_PATTERNS.md  ADVANCED_PATTERNS_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_UNIFIED.md  CONTRIBUTING.md  FLEXCORE_IMPLEMENTATION_STATUS.md  FLEXT_WORKSPACE_INVENTORY.md  NEXT_SESSION_PLAN.md  OBSERVABILITY.md  PROJECT_ANALYSIS_REPORT.md  README.md  TODO.md  WINDMILL_INTEGRATION.md  api-reference.md  architecture_old.md
docs/architecture/: overview.md
docs/getting-started/: installation.md
docs/go/: api-reference.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/integration/: flext-ecosystem.md
docs/kubernetes/: README.md
docs/ray/: README.md
docs/standards/: go-module-organization.md
domain/: base.go  base_test.go
domain/entities/: pipeline.go  pipeline_events.go  pipeline_test.go  plugin.go
examples/: simple_adapter.go
examples/adapters.broken/: postgres_adapter.go
examples/complete_flexcore/: main.go
examples/plugin/: main.go
examples/plugin_host.broken/: main.go
gateway/: api_gateway.go  go.mod  go.sum
infrastructure/config/: manager.go
infrastructure/cqrs/: cqrs_bus.go  go.mod
infrastructure/di/: advanced_container.go  container.go  container_test.go
infrastructure/events/: event_bus.go  event_bus_test.go
infrastructure/eventsourcing/: event_store.go  go.mod  test_event_store.go
infrastructure/handlers/: chain.go
infrastructure/observability/: metrics.go  monitor.go  observability_test.go  tracing.go
infrastructure/persistence/: repository.go
infrastructure/plugins/: go.mod  (+1 more)
integration/: go.mod  main.go
logging/: distributed_logger.go  go.mod  go.sum
observability/: go.mod  go.sum  metrics_server.go
old/: Makefile.old
plugins/: data_processor_interface.proto  go.mod  go.sum  real_plugin_host.go
reports/: pytest.xml
scripts/: README.md  build-real-distributed.sh  build.sh  check-cluster-status.sh  fix-imports.sh  mkall.sh  mkerrors.sh  run_real_e2e_tests.sh  start-distributed.sh  start-real-cluster.sh  stop-cluster.sh  test-100-percent-complete.sh  test-100-percent-real.sh  test-complete-system.sh  test-e2e-simple.sh  test-multi-node-cluster.sh  test-network-cluster.sh  test-production-cluster.sh  test-real-distributed.sh  test-real-e2e-complete.sh  test-real-production-validation.sh  test_distributed_coordination.sh  test_multi_node_real.sh  test_plugin_integration.sh  validate-flexcore-100-percent.sh
simple-windmill-server/: go.mod  main.go
tests/: __init__.py  run_all_tests.sh  test___init__.py  test_basic.py  test_chaos_engineering_real.go  test_end_to_end_100_complete.go  test_final_100_percent.go  test_flext_integration.py  test_multi_node_load_real.go  test_plugins_real_data.go  test_real_cluster_integration.go  test_real_corrected_plugins.go  test_real_multi_node.go  test_real_performance.go  test_real_plugin_execution.go  test_real_plugin_working.go  test_real_plugins.go  test_real_redis_connection.go  test_real_scheduler.go  test_stress_prolonged.go  test_stress_prolonged_10min.go  test_system_1_hour_validation.go
windmill-server/: go.mod  main.go
(+252 files in other folders)
