[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flexcore"
version = "0.7.0"
description = "FlexCore - High-Performance Go-Python Hybrid Enterprise Framework"
authors = [{name = "FLEXT Team", email = "team@flext.sh"}]
maintainers = [{name = "FLEXT Team", email = "team@flext.sh"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Go-Python Hybrid Framework specific dependencies
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.0.0",
    "click>=8.1.7",
    "python-dateutil>=2.9.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
]
keywords = ["flexcore", "go", "python", "hybrid", "framework", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Go",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
flexcore = "flexcore.cli:main"
flexcore-server = "flexcore.server:main"

[tool.poetry]
packages = [{include = "flexcore", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# All development dependencies managed by workspace root pyproject.toml
# All tool configurations inherited from workspace root pyproject.toml

# Project-specific tool configurations
[tool.pytest.ini_options]
markers = [
    "go: marks tests as Go integration tests",
    "grpc: marks tests as gRPC tests",
    "hybrid: marks tests as Go-Python hybrid tests",
    "performance: marks tests as performance tests",
    "requires_go: tests that need Go runtime",
]
