[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flexcore"
version = "0.7.0"
description = "FlexCore - High-Performance Go-Python Hybrid Enterprise Framework"
authors = [{name = "FLEXT Team", email = "team@flext.sh"}]
maintainers = [{name = "FLEXT Team", email = "team@flext.sh"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Go-Python Hybrid Framework specific dependencies
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.0.0",
    "click>=8.1.7",
    "python-dateutil>=2.9.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
]
keywords = ["flexcore", "go", "python", "hybrid", "framework", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Go",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
flexcore = "flexcore.cli:main"
flexcore-server = "flexcore.server:main"

[tool.poetry]
packages = [{include = "flexcore", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# All development dependencies managed by workspace root pyproject.toml
# All tool configurations inherited from workspace root pyproject.toml

# Project-specific tool configurations

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.13.0"
pylint = "^3.3.0"
vulture = "^2.13"
radon = "^6.0.1"
pre-commit = "^4.0.1"
codespell = "^2.3.0"
pyupgrade = "^3.19.0"
autoflake = "^2.3.1"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocstrings = "^0.27.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
ipython = "^9.4.0"
jupyter = "^1.1.1"
rich-traceback = "^1.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.0"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.4.0"
pytest-benchmark = "^5.1.0"
pytest-randomly = "^3.16.0"
pytest-sugar = "^1.0.0"
pytest-clarity = "^1.0.1"
pytest-deadfixtures = "^2.2.1"
pytest-env = "^1.1.5"
pytest-httpx = "^0.35.0"
hypothesis = "^6.125.0"
factory-boy = "^3.3.1"
faker = "^37.4.0"


[tool.poetry.group.typings.dependencies]
types-python-dateutil = "^2.9.0"
types-pyyaml = "^6.0.12"
types-setuptools = "^80.9.0"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.4"
types-redis = "^4.6.0"
types-psutil = "^7.0.0"


[tool.poetry.group.security.dependencies]
bandit = "^1.8.0"
pip-audit = "^2.7.3"

[tool.pytest.ini_options]
markers = [
    "go: marks tests as Go integration tests",
    "grpc: marks tests as gRPC tests",
    "hybrid: marks tests as Go-Python hybrid tests",
    "performance: marks tests as performance tests",
    "requires_go: tests that need Go runtime",
]
